--- a/assignment-files/index.html
+++ b/assignment-files/index.html
@@ -6,28 +6,37 @@
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+  <!-- Task 1 -->
 
      <div class="exercise-container" id="reset-field"><!-- Teacher stuff magically appears! -->
        <div class="content-box student-workspace">
          <h4>Your Work</h4>
          <p><em>Code your answer in <code>main.js</code> and </em></p>
-         <p><button>Push Me</button></p>
+         <!-- (0) Event Element -->
+         <p><button id="reset-field-btn">Push Me</button></p>
          <div class="answer-box">
-            <input type="text">
-            <p class="flash-display"><!--Validation message here--></p>
+            <!-- (1) Element to modify -->
+            <input type="text" class="ex1-text">
          </div>
        </div>
      </div>
 
      <hr class="q-divider">
 
+  <!--.........-->
+  <!-- Task 2 -->
+  <!--.........-->
+
   <div class="exercise-container" id="validate-field"><!-- Teacher stuff magically appears! -->
     <div class="content-box student-workspace">
       <h4>Your Work</h4>
       <p><em>Code your answer in <code>main.js</code></em></p>
-      <p><button>Push Me</button></p>
+      <!-- (0) Event Element -->
+      <p><button id="validate-field-btn">Push Me</button></p>
       <div class="answer-box">
-         <input type="text">
+        <!-- (1) Data Source -->
+         <input type="text" class="ex2-text">
+         <!-- (1) Element to modify -->
          <p class="flash-message"><!--Validation message here--></p>
       </div>
     </div>
@@ -35,41 +44,57 @@
 
   <hr class="q-divider">
 
+
+  <!--.........-->
+  <!-- Task 3 -->
+  <!--.........-->
+
   <div class="exercise-container" id="calculate-items"><!-- Teacher stuff magically appears! -->
     <div class="content-box student-workspace">
       <h4>Your Work</h4>
       <p><em>Code your answer in <code>main.js</code></em></p>
-      <p><button>Push Me</button></p>
+      <!-- (0) Event Element -->
+      <p><button id="calculate-items-btn">Push Me</button></p>
       <div class="answer-box">
-         <div class="cars-list">
-            <label><input type="checkbox" value="77" name="Shoes">Shoes</label>
-            <label><input type="checkbox" value="16" name="Shirt">Shirt</label>
-            <label><input type="checkbox" value="38" name="Pants">Pants</label>
-            <label><input type="checkbox" value="2" name="Socks">Socks</label>
-            <label><input type="checkbox" value="23" name="Belt">Belt</label>
-            <label><input type="checkbox" value="26" name="Belt">Hat</label>
+         <div class="items-list">
+           <!-- (1) Data Source -->
+            <label><input class="item-input" type="checkbox" value="77" name="Shoes">Shoes</label>
+            <label><input class="item-input" type="checkbox" value="16" name="Shirt">Shirt</label>
+            <label><input class="item-input" type="checkbox" value="38" name="Pants">Pants</label>
+            <label><input class="item-input" type="checkbox" value="2" name="Socks">Socks</label>
+            <label><input class="item-input" type="checkbox" value="23" name="Belt">Belt</label>
+            <label><input class="item-input" type="checkbox" value="26" name="Belt">Hat</label>
          </div>
          <p class="summary">
+           <!-- (2) Element to modify (span.sum-total) -->
             <span>Total:</span> <span class="sum-total">$ 0</span>
          </p>
       </div>
     </div>
   </div>
-  
+
   <hr class="q-divider">
+
+  <!--.........-->
+  <!-- Task 4 -->
+  <!--.........-->
 
   <div class="exercise-container" id="select-to-show-more"><!-- Teacher stuff magically appears! -->
     <div class="content-box student-workspace">
       <h4>Your Work</h4>
       <p><em>Code your answer in <code>main.js</code></em></p>
-      <p><button>Push Me</button></p>
+      <!-- (0) Event Element -->
+      <p><button id="select-to-show-more-btn">Push Me</button></p>
       <div class="answer-box show-options">
             <select class="selection">
+              <!-- (1) Data Source -->
               <option value="Mini Cooper" data-msrp="20,950" data-mpg="27-33 mpg"  data-edmunds="B" data-img="mini-cooper_145.jpg">2016 Mini Cooper</option>
               <option value="Mazda 3" data-msrp="18,345" data-mpg="29-34 mpg" data-edmunds="A" data-img="mazda-3_1239.jpg">2016 Mazda 3</option>
               <option value="Dodge Charger" data-msrp="27,995" data-mpg="16-23 mpg"  data-edmunds="B" data-img="dodge-charger_3932.jpg"> 2016 Dodge Charger</option>
 
            </select>
+
+           <!-- (2) Elements to modify (see code comments below) -->
             <div class="more-info">
                <div class="img-box">
                   <!-- img goes here -->
@@ -88,34 +113,7 @@
     </div>
   </div>
 
-  <hr class="q-divider">
-
-  <div class="exercise-container" id="add-guest"><!-- Teacher stuff magically appears! -->
-    <div class="content-box student-workspace">
-      <h4>Your Work</h4>
-      <p><em>Code your answer in <code>main.js</code>. You may need to add extra html elements inside of the <code>div.answer-box</code>, and give those elements an attribute of <code>class="guest"</code > </em></p>
-      <div class="answer-box">
-        <input type="text"/>
-        <h3>Guest List</h3>
-        <ul class="guest-list"></ul>
-      </div>
-    </div>
-  </div>
-
-  <hr class="q-divider">
-
-  <div class="exercise-container" id="add-item-bonus"><!-- Teacher stuff magically appears! -->
-    <div class="content-box student-workspace">
-      <h4>Your Work</h4>
-      <p><em>Code your answer in <code>main.js</code>. <br/><br/> When adding to the list, you will need to create an <code>&lt;li class="item"&gt;</code > element that contains both the text from the input and that also contains a <code>&lt;button class='remove'&gt;</code>.</em></p>
-      <div class="answer-box">
-        <input type="text">
-        <h3>Items List</h3>
-        <ul class="guest-list"></ul>
-      </div>
-    </div>
-  </div>
-   
+]
 
 <script src="./project-setup.js"></script>
 <script src="./main.js"></script>
